--- a/hugo.toml
+++ b/hugo.toml
@@ -63,6 +63,9 @@ pagination.pagerSize = 5
   # Example format, with date, time, and timezone abbreviation:
   # dateFormat = "2006-01-02 3:04:06 PM MST"
 
+  # Sort posts in ascending (oldest first) order
+  ascendingOrder = true
+
 
 [params.twitter]
   # set Twitter handles for Twitter cards
